--- a/screens/Contact/index.module.css
+++ b/screens/Contact/index.module.css
@@ -1,10 +1,10 @@
 .page {
   display: grid;
   gap: 120px;
-  margin-bottom: 200px;
+  padding-bottom: 200px;
 
   @media (max-width: 768px) {
     gap: 64px;
-    margin-bottom: 128px;
+    padding-bottom: 72px;
   }
 }
